<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="center_vertical"
        android:textAlignment="textEnd"
        android:paddingEnd="8dp"
        android:textColor="@color/teal_700"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/modulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expression"
        app:layout_constraintVertical_weight="2"
        tools:ignore="RtlCompat,RtlSymmetry" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/expression"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:paddingTop="20sp"
        android:gravity="bottom"
        android:textAlignment="textEnd"
        android:paddingEnd="8dp"
        android:textColor="@color/teal_200"
        android:textSize="75sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="2.8"
        tools:ignore="RtlCompat,RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/modulo"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:text="@string/modulo"
        android:onClick="onOperator"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiply"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiply"
        android:onClick="onOperator"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/modulo"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/division"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/division"
        android:onClick="onOperator"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        android:text="@string/clear"
        android:onClick="onClear"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintStart_toEndOf="@+id/division"
        app:layout_constraintTop_toBottomOf="@+id/result" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/seven"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:text="@string/seven"
        android:onClick="onDigit"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modulo"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eight"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight"
        android:onClick="onDigit"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/multiply"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nine"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        android:onClick="onDigit"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/division"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        android:text="@string/delete"
        android:onClick="onDelete"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/subtract"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        android:text="@string/subtract"
        android:onClick="onOperator"
        android:textColor="@color/teal_700"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/delete" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/four"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:text="@string/four"
        android:onClick="onDigit"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/five"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        android:onClick="onDigit"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/eight"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/six"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        android:onClick="onDigit"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/subtract"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/nine"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/one"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:text="@string/one"
        android:onClick="onDigit"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/two"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        android:onClick="onDigit"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/decimal"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/three"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        android:onClick="onDigit"
        app:layout_constraintBottom_toTopOf="@+id/equals"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/zero"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/zero"
        android:onClick="onDigit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decimal"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decimal"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:text="@string/decimal"
        android:onClick="onDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equals"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/two"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/equals"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:text="@string/equals"
        android:onClick="onEqual"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/decimal"
        app:layout_constraintTop_toBottomOf="@+id/three"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        android:text="@string/add"
        android:onClick="onOperator"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@+id/equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/subtract" />


</androidx.constraintlayout.widget.ConstraintLayout>